refactor: 替换MMKV为DataStore实现壁纸配置存储
- 新增WallPaperPreferences管理壁纸URI配置
- 修改MainActivity使用DataStore更新配置
- 修改PadAdaptationWallpaperService监听DataStore配置变化
- 移除MMKV相关依赖及初始化代码
- 添加datastore-preferences依赖

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.9.1"
+datastorePreferences = "1.1.4"
 glide = "4.16.0"
 kotlin = "2.1.10"
 coreKtx = "1.16.0"
@@ -13,6 +14,7 @@ mmkv = "2.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
